2006-06-22  sabetts  <sabetts@446IG5.PSY.cmu.edu>

	* stumpwm.lisp (stumpwm): call update-modifier-map

	* primitives.lisp (*all-modifiers*): new global
	(*modifiers*): likewise
	(screen): remove modifiers slot

	* kmap.lisp (x11-mods): handle meta alt syper and super modifiers

	* input.lisp (code-state->key): handle meta alt syper and super modifiers
	(all-modifier-codes): new function
	(get-modifier-map): new function
	(update-modifier-map): call all-modifier-codes and get-modifier-map

	* core.lisp (:mapping-notify): new event handler

2006-05-07  Shawn Betts  <sabetts@vcn.bc.ca>

	* kmap.lisp (print-key): call keysym->stumpwm-name

	* keytrans.lisp (keysym-name->stumpwm-name): new function
	(keysym->stumpwm-name): likewise

2006-05-06  Shawn Betts  <sabetts@vcn.bc.ca>

	* input.lisp (*input-map*): use DEL to refer to the backspace
	key. New binding, Delete. use RET to refer to the return key.
	(input-self-insert): report an error if the keysym is not associated with a character

	* user.lisp (*root-map*): use SPC to refer to the space key

	* stumpwm.asd (:stumpwm): add keysyms and keytrans files and dependancies

	* primitives.lisp (char->keysym): call keysym-name->keysym
	(is-modifier): use keysym names

	* kmap.lisp (key): replace char slot with keysym. all callers updated.
	(parse-char-name): remove function
	(parse-key): call stumpwm-name->keysym 
	(print-key): call keysym->keysym-name

2006-05-02  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (pull-window-by-number): set the pulled window's
	frame's window to null before raising the frame's new window.
	("only"): new command
	(*root-map*): bind "Q" to "only"

2006-04-29  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (font-exists-p): new function
	(set-font): verify that the font exists first

	* package.lisp (:stumpwm): export #:set-border-color

	* core.lisp (set-fg-color): return nil if the color doesn't exist.
	(set-bg-color): likewise
	(set-border-color): likewise
	(color-exists-p): new function
