@@ -11,3 +11,4 @@ Manuel Giraud     manuel.giraud at cetp ipsl fr
 Andreas Scholta   andreas.scholta at gmail com
 Philippe Brochard hocwp at free fr
 Matthew Kennedy   mkennedy at gentoo org
+Phil Gregory      phil_g at pobox com
